# sports-middling-lab

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
docs/: README.md
docs/guides/: deployment.md  getting-started.md  interpreting-sports-scanner.md  screenshot-gallery.md  the-odds-api.md
sports_middling/: __init__.py  middling.py  research_log.py  sports_odds_api.py
tests/: __init__.py  test_middling.py  test_research_log.py  test_sports_odds_api.py
