[project]
name = "sports-middling-lab"
version = "0.1.0"
description = "Streamlit lab for sports middling, line shopping, arbitrage, and outright dutching analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.20",
    "requests>=2.31",
    "streamlit>=1.35",
]

[tool.pytest.ini_options]
pythonpath = ["."]
